<resources>
    <string name="app_name">Шпион</string>
    <string name="main_label">ШПИОН</string>
    <string name="create_game_label">Настройка игры</string>
    <string name="locations_label">Локации</string>
    <string name="location_label">Локация</string>
    <string name="description_label">Описание</string>
    <string name="end_game_label">Игра окончена</string>
    <string name="spy_lose">Шпион(ы) вычислен(ы)!</string>
    <string name="spy_win">Шпион(ы) выполнил(и) задание!</string>
    <string name="vote_label">Голосование</string>
    <string name="rules_label">Правила</string>
    <string name="view_role_label">Роль</string>
    <string name="preview_role_label">Нажмите, чтобы узнать роль</string>
    <string name="rules_text">Шпион - Игра для компании от 3 человек. Каждому игроку выдается карточка, на которой написана либо локация и статус либо, то что он шпион. Игра идет на время, за выделенное время, игрокам, знающим локацию предстоит вычислить шпиона, а шпиону выяснить локацию. В начале игры определяется игрок начинающий задавать вопросы. Игрок задающий вопрос сам выбирает кому хочет задать вопрос. Вопрос может быть любым, так же как и ответ. Игроки сами решают устраивает ли их ответ. Отвечающий следующим задает вопрос, но не может задавать его тому, кому только что ответил. Каждый игрок в любой момент один раз за игру может выдвинуть одного подозриваемого в шпионаже на голосование (при голосованиии игра ставится на паузу). При полном согласии всех игроков (не считая шпионов) подозреваемый говорит локацию. Если этот игрок шпион и он назвал неправильную локацию, шпион проигрывает (Если шпионы еще остались, игра продолжается). Если шпион назвал правильную локацию или это не шпион, простые игроки проигрывают. Также если за время игры шпион догодался что это за локация, он может выдвинуть свое предположение, но если это неправильная локация он автомотически проигрывает. Если время игры прошло, проводится голосование за подозриваемого шпиона. Все одновременно показывают на своего подозреваемого пальцем. Тот игрок за кого будет больше всего голосов должен назвать локацию. При равенстве голосов бросается монетка. Хорошей игры! </string>
    <string name="button_new_game">Новая игра</string>
    <string name="button_rules">Правила</string>
    <string name="location">Локация</string>
    <string name="button_back">Назад</string>
    <string name="button_add_location">Добавить локацию</string>
    <string name="button_add_role">Добавить роль</string>
    <string name="button_save">Сохранить</string>
    <string name="button_end_game">Завершить</string>
    <string name="button_finish">Голосовать</string>
    <string name="button_vote_spy">Шпион отвечает</string>
    <string name="button_game_begin">Начать игру</string>
    <string name="img_main_back_description">SPY background</string>
    <string name="img_location_back_description">locations background</string>
    <string name="img_end_game_back_description">end game background</string>
    <string name="img_game_vote_description">game vote background</string>
    <string name="default_players_number">3</string>
    <string name="players_number">Количество игроков</string>
    <string name="choose_spy">Выберите шпиона</string>
    <string name="choose_spy_answer">Выберите отвечающего</string>
    <string name="warning_unsaved_role">Локация не сохранена!</string>
    <string name="warning_add_role">Добавьте роли!</string>
    <string name="help_location_edit">Имя и описание локации можно редактировать.\nУ каждой роли есть имя, вес и опция "уникальности".\nЧем больше вес, тем больше вероятность выпадения роли.\nЕсли роль уникальная, то она может выпасть только один раз.\nРедактировать роль можно при нажатии на нее.\nДля добавления роли есть соответствующая кнопка.\nНе забудьте сохранить изменения.</string>
    <string name="help_location">Все локации, отмеченные галочкой, будут учавствовать в новой игре.\nЛокакии со снятой галочкой в игру не попадут.\nПри нажатии на крестик, локация удаляется из игры навсегда.\nПо клику на элемент локации, открывается окно детальных настроек. </string>
    <string name="default_spy_number">1</string>
    <string name="random_spy_number">Случайное количество шпионов</string>
    <string name="spy_number">Количество шпионов</string>>
    <string name="default_game_time">3</string>
    <string name="game_time">Время игры</string>
    <string name="minute">минут(ы)</string>
    <string name="minus">минус</string>
    <string name="plus">плюс</string>
    <string name="timer">таймер</string>
    <string name="only_one">Может быть использован один раз</string>
    <string name="player">Игрок</string>
    <string name="weight">Вес</string>
    <string name="game_in_process">Игра идет</string>
    <string name="default_time">0:00</string>
    <string name="to_next">Нажмите на пустую область и передайте следующему</string>
    <string name="spy_role">Ты шпион, постарайся угадать локацию и не раскрыть себя!</string>
</resources>