<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateGameActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:contentDescription="@string/img_location_back_description"
        android:background="@color/black"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/game_begin" />

    <TextView
        android:id="@+id/main_label"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="70dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/create_game_label"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:flow_horizontalAlign="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/mainLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="wrap_content"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_label">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/playersLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/playersNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/players_number"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/minusPlayerBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/minusPlayerBtn"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/custom_btn_remove"
                android:contentDescription="@string/minus"
                android:onClick="erasePlayerNumber"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/viewPlayerNumber"
                app:layout_constraintTop_toTopOf="parent"  />

            <TextView
                android:id="@+id/viewPlayerNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_players_number"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/plusPlayerBtn"
                app:layout_constraintTop_toTopOf="parent"  />

            <Button
                android:id="@+id/plusPlayerBtn"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/custom_btn_add"
                android:backgroundTint="#C5BCBC"
                android:contentDescription="@string/plus"
                android:onClick="addPlayerNumber"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"   />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/spyLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/spyNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/spy_number"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/minusSpyBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/minusSpyBtn"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/custom_btn_remove"
                android:contentDescription="@string/minus"
                android:onClick="eraseSpyNumber"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/viewSpyNumber"
                app:layout_constraintTop_toTopOf="parent"  />

            <TextView
                android:id="@+id/viewSpyNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_spy_number"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/plusSpyBtn"
                app:layout_constraintTop_toTopOf="parent"  />

            <Button
                android:id="@+id/plusSpyBtn"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/custom_btn_add"
                android:backgroundTint="#C5BCBC"
                android:contentDescription="@string/plus"
                android:onClick="addSpyNumber"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"  />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/randomSpyLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/randomSpyBox"
                style="@style/CustomCheckBoxWhite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:paddingRight="10dp"
                android:text="@string/random_spy_number"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/gameTimeLayout"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/gameTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/game_time"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/minusTimeBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/minusTimeBtn"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/custom_btn_remove"
                android:contentDescription="@string/minus"
                android:onClick="eraseGameTime"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/viewGameTime"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/viewGameTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="30dp"
                android:text="@string/default_game_time"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/plusTimeBtn"
                app:layout_constraintTop_toTopOf="parent"  />

            <Button
                android:id="@+id/plusTimeBtn"
                style="@style/Widget.Material3.Button.ElevatedButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/custom_btn_add"
                android:backgroundTint="#C5BCBC"
                android:contentDescription="@string/plus"
                android:onClick="addGameTime"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/minuteWord"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/minuteWord"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/minute"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </TableLayout>

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="80dp"
        android:orientation="vertical"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight="wrap_content"
        app:layout_constraintHeight_default="wrap"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/game_begin"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:onClick="goToBeginGame"
            android:layout_marginBottom="20dp"
            android:text="@string/button_game_begin"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_rules"
            style="@style/Widget.Material3.ExtendedFloatingActionButton.Icon.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/back"
            android:onClick="goToMain"
            android:text="@string/button_back"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>